--- a/content/crosswords/001.md
+++ b/content/crosswords/001.md
@@ -10,10 +10,10 @@ This is the first cryptic crossword I've constructed in a while: I'm trying to
 get (back?) into the habit of making stuff regularly.
 
 I'm still figuring out the difficulty of my crosswords: Crosshare tells me I've
-written [a black
+written [a double black
 diamond](https://crosshare.org/articles/crossword-difficulty-ratings), and an
-Internet stranger  has called it [_"a mix of easy and diabolical
-clues"_](https://www.reddit.com/r/crosswords/comments/ubjlhw/comment/i66jtch),
+Internet stranger  has called it _["a mix of easy and diabolical
+clues",](https://www.reddit.com/r/crosswords/comments/ubjlhw/comment/i66jtch)_
 which I'm inexplicably pleased by!
 
 Anyways, a huge thank you to [Steve Mossberg](https://squarepursuit.com/) for
