Add crossword newsletter

--- a/content/crosswords/001.md
+++ b/content/crosswords/001.md
@@ -3,7 +3,7 @@ title: "Loplop Cryptic #001 [13×]"
 date: 2022-04-24
 images:
   - https://crosshare.org/api/ogimage/buAqSjPJdr3CotXi30ud
-subscribeFooter: false
+blogSubscribeFooter: false
 ---
 
 This is the first cryptic crossword I've constructed in a while: I'm trying to
