--- a/content/crosswords/002.md
+++ b/content/crosswords/002.md
@@ -3,7 +3,7 @@ title: "Loplop Cryptic #002 [11×]"
 date: 2022-05-01
 images:
   - https://crosshare.org/api/ogimage/2Z5Re9qgpCfwG3jPvXAh
-subscribeFooter: false
+blogSubscribeFooter: false
 ---
 
 I tried hard to make this one easier than [#001](/crosswords/001), and I think
