Remove 'Made with Hugo Bear' byline, touch up blog post and crossword page

--- a/content/crosswords/002.md
+++ b/content/crosswords/002.md
@@ -12,7 +12,8 @@ Next week I'll go even smaller (probably a 7×7) and really commit to using
 "plain language" definitions.
 
 Huge thanks to Michael Colella and
-[`dianyx`](https://crosshare.org/dianyXwords), and hope you enjoy!
+[`dianyx`](https://crosshare.org/dianyXwords) for test solves, and hope you
+enjoy!
 
 [web](https://crosshare.org/crosswords/2Z5Re9qgpCfwG3jPvXAh/loplop-cryptic-002-11)
 / [puz](/crosswords/loplop-002.puz)
