Add favorite clue as description in publication workflow

--- a/content/crosswords/001.md
+++ b/content/crosswords/001.md
@@ -1,6 +1,7 @@
 ---
 title: "Loplop Cryptic #001 [13×]"
 date: 2022-04-24
+description: Rationale for a demilitarized China? (11)
 images:
   - https://crosshare.org/api/ogimage/buAqSjPJdr3CotXi30ud
 blogSubscribeFooter: false
