--- a/content/crosswords/002.md
+++ b/content/crosswords/002.md
@@ -1,6 +1,7 @@
 ---
 title: "Loplop Cryptic #002 [11×]"
 date: 2022-05-01
+description: Language requirement of Purdue (4)
 images:
   - https://crosshare.org/api/ogimage/2Z5Re9qgpCfwG3jPvXAh
 blogSubscribeFooter: false
