--- a/content/crosswords/003.md
+++ b/content/crosswords/003.md
@@ -1,6 +1,7 @@
 ---
 title: "Loplop Cryptic #003 [7×]"
 date: 2022-05-05
+description: That man outside? Delinquent, turning to drink (7)
 images:
   - https://crosshare.org/api/ogimage/H8rnX5pDWZ3aph5R0L1D
 blogSubscribeFooter: false
