--- a/content/crosswords/005.md
+++ b/content/crosswords/005.md
@@ -14,11 +14,11 @@ newcomers who opine on the overall difficulty of a puzzle, or wordplay veterans
 who pick on my cryptic grammar, clue by clue. This week, a huge thanks to
 Michael Colella, Ziv Stern and Jay White for test solving and clue editing.
 
-I'm not sure when the next Loplop Cryptic will drop, but I can say that I'm
-super excited about the puzzle I'm currently working on. I don't know where
-this puzzle will ultimately live (perhaps not Crosshare!), so stay tuned, and
-[subscribe to my newsletter](https://tinyletter.com/loplop) if you'd like to be
-notified when it goes up!
+I'm currently working on an exciting _variety_ of puzzle, but I'm not sure when
+it'll be done, or even where it'll live when it's finished. If you want to get
+notified when it's up, make sure you follow me somehow! (My
+[Twitter](https://twitter.com/__loplop) and
+[newsletter](https://tinyletter.com/loplop) are your best bets.)
 
 [web](https://crosshare.org/crosswords/6RdedISrfgeijWKQyMDw/loplop-cryptic-005-11)
 / [puz](/crosswords/loplop-005.puz)
