--- a/content/crosswords/005.md
+++ b/content/crosswords/005.md
@@ -25,4 +25,8 @@ notified when it's up, make sure you follow me somehow! (My
 / [pdf](/crosswords/loplop-005.pdf)
 / [solutions and annotations](/crosswords/loplop-005-solutions.pdf)
 
+**Edit:** there was a typo in the entry for 2D. I've since corrected the puz
+and pdf versions, but unfortunately Crosshare doesn't allow editing entries
+(only the clues). I've appended a note to the clue to reflect this. Sorry.
+
 <iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/6RdedISrfgeijWKQyMDw/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
