--- a/content/crosswords/013.md
+++ b/content/crosswords/013.md
@@ -5,6 +5,7 @@ description: Two computer manufacturers turned around and requested merchandise'
 images:
   - https://crosshare.org/api/ogimage/1E1KnV6T4W4fl7RAd6mC
 blogSubscribeFooter: false
+embed: '<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/1E1KnV6T4W4fl7RAd6mC/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>'
 ---
 
 We're back with a regular-sized themeless puzzle! But before we dive in, I want
@@ -72,5 +73,3 @@ willing to go.
 / [puz](/crosswords/loplop-013.puz)
 / [pdf](/crosswords/loplop-013.pdf)
 / [solutions and annotations](/crosswords/loplop-013-solutions.pdf)
-
-<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/1E1KnV6T4W4fl7RAd6mC/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
