Update the rest of the blog posts

--- a/content/crosswords/001.md
+++ b/content/crosswords/001.md
@@ -4,6 +4,7 @@ date: 2022-04-24
 description: Rationale for a demilitarized China? (11)
 images:
   - https://crosshare.org/api/ogimage/buAqSjPJdr3CotXi30ud
+embed: '<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/buAqSjPJdr3CotXi30ud/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>'
 blogSubscribeFooter: false
 ---
 
@@ -24,5 +25,3 @@ the test solve, and I hope you enjoy!
 / [puz](/crosswords/loplop-001-13x.puz)
 / [pdf](/crosswords/loplop-001-13x.pdf)
 / [solutions and annotations](/crosswords/loplop-001-13x-solutions.pdf)
-
-<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/buAqSjPJdr3CotXi30ud/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
