--- a/content/crosswords/002.md
+++ b/content/crosswords/002.md
@@ -4,6 +4,7 @@ date: 2022-05-01
 description: Language requirement of Purdue (4)
 images:
   - https://crosshare.org/api/ogimage/2Z5Re9qgpCfwG3jPvXAh
+embed: '<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/2Z5Re9qgpCfwG3jPvXAh/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>'
 blogSubscribeFooter: false
 ---
 
@@ -20,5 +21,3 @@ enjoy!
 / [puz](/crosswords/loplop-002.puz)
 / [pdf](/crosswords/loplop-002.pdf)
 / [solutions and annotations](/crosswords/loplop-002-solutions.pdf)
-
-<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/2Z5Re9qgpCfwG3jPvXAh/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
