--- a/content/crosswords/003.md
+++ b/content/crosswords/003.md
@@ -4,6 +4,7 @@ date: 2022-05-05
 description: That man outside? Delinquent, turning to drink (7)
 images:
   - https://crosshare.org/api/ogimage/H8rnX5pDWZ3aph5R0L1D
+embed: '<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/H8rnX5pDWZ3aph5R0L1D/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>'
 blogSubscribeFooter: false
 ---
 
@@ -24,5 +25,3 @@ Thanks to Michael Colella for the test solve, and hope you enjoy!
 / [puz](/crosswords/loplop-003.puz)
 / [pdf](/crosswords/loplop-003.pdf)
 / [solutions and annotations](/crosswords/loplop-003-solutions.pdf)
-
-<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/H8rnX5pDWZ3aph5R0L1D/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
