--- a/content/crosswords/004.md
+++ b/content/crosswords/004.md
@@ -4,6 +4,7 @@ date: 2022-05-13
 description: Haphazardly airlifted for fast ending (3,2-4)
 images:
   - https://crosshare.org/api/ogimage/jzXY5Ny92z8kvwfidiGz
+embed: '<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/jzXY5Ny92z8kvwfidiGz/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>'
 blogSubscribeFooter: false
 ---
 
@@ -29,5 +30,3 @@ Plain: [web](https://crosshare.org/crosswords/jzXY5Ny92z8kvwfidiGz/loplop-crypti
 With wordplay: [web](https://crosshare.org/crosswords/IgzfJfw6N6iQFNKqncvv/loplop-cryptic-004-with-wordplay-15)
 / [puz](/crosswords/loplop-004-with-wordplay.puz)
 / [pdf](/crosswords/loplop-004-with-wordplay.pdf)
-
-<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/jzXY5Ny92z8kvwfidiGz/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
