--- a/content/crosswords/005.md
+++ b/content/crosswords/005.md
@@ -4,6 +4,7 @@ date: 2022-05-18
 description: "assembled oracles: \"we like this sentence\" (9)"
 images:
   - https://crosshare.org/api/ogimage/6RdedISrfgeijWKQyMDw
+embed: '<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/6RdedISrfgeijWKQyMDw/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>'
 blogSubscribeFooter: false
 ---
 
@@ -28,5 +29,3 @@ notified when it's up, make sure you follow me somehow! (My
 **Edit:** there was a typo in the entry for 2D. I've since corrected the puz
 and pdf versions, but unfortunately Crosshare doesn't allow editing entries
 (only the clues). I've appended a note to the clue to reflect this. Sorry.
-
-<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/6RdedISrfgeijWKQyMDw/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
