--- a/content/crosswords/006.md
+++ b/content/crosswords/006.md
@@ -4,6 +4,7 @@ date: 2022-05-30
 description: A bit of absinthe meant I mellowed while waiting (2,3,8)
 images:
   - https://crosshare.org/api/ogimage/HsveTSBe87uWcsbYkvh4
+embed: '<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/HsveTSBe87uWcsbYkvh4/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>'
 blogSubscribeFooter: false
 ---
 
@@ -26,5 +27,3 @@ puzzle!
 / [puz](/crosswords/loplop-006.puz)
 / [pdf](/crosswords/loplop-006.pdf)
 / [solutions and annotations](/crosswords/loplop-006-solutions.pdf)
-
-<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/HsveTSBe87uWcsbYkvh4/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
