--- a/content/crosswords/007.md
+++ b/content/crosswords/007.md
@@ -4,6 +4,7 @@ date: 2022-06-11
 description: Cryptic language found in pairs of court decisions (4)
 images:
   - https://crosshare.org/api/ogimage/vPO42x9j2fGRiFmoKqoX
+embed: '<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/vPO42x9j2fGRiFmoKqoX/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>'
 blogSubscribeFooter: false
 ---
 
@@ -31,5 +32,3 @@ that I'm constructing quiptics correctly --- I hope you enjoy the puzzle!
 / [puz](/crosswords/loplop-007.puz)
 / [pdf](/crosswords/loplop-007.pdf)
 / [solutions and annotations](/crosswords/loplop-007-solutions.pdf)
-
-<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/vPO42x9j2fGRiFmoKqoX/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
