--- a/content/crosswords/008.md
+++ b/content/crosswords/008.md
@@ -4,6 +4,7 @@ date: 2022-06-25
 description: Toothy piece of Spanish arugula? (8)
 images:
   - https://crosshare.org/api/ogimage/5sJ24V4N7BcilK5iLYkn
+embed: '<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/5sJ24V4N7BcilK5iLYkn/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>'
 blogSubscribeFooter: false
 ---
 
@@ -26,5 +27,3 @@ hope you enjoy!
 / [puz](/crosswords/loplop-008.puz)
 / [pdf](/crosswords/loplop-008.pdf)
 / [solutions and annotations](/crosswords/loplop-008-solutions.pdf)
-
-<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/5sJ24V4N7BcilK5iLYkn/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
