--- a/content/crosswords/009.md
+++ b/content/crosswords/009.md
@@ -4,6 +4,7 @@ date: 2022-07-13
 description: Kombucha fermenter is one robot I care about (10)
 images:
   - https://crosshare.org/api/ogimage/M1JoyFwDjZ5hHxiToPvT
+embed: '<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/M1JoyFwDjZ5hHxiToPvT/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>'
 blogSubscribeFooter: false
 ---
 
@@ -71,5 +72,3 @@ this clue?
 / [puz](/crosswords/loplop-009.puz)
 / [pdf](/crosswords/loplop-009.pdf)
 / [solutions and annotations](/crosswords/loplop-009-solutions.pdf)
-
-<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/M1JoyFwDjZ5hHxiToPvT/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
