--- a/content/crosswords/011.md
+++ b/content/crosswords/011.md
@@ -4,6 +4,7 @@ date: 2022-07-28
 description: Bank depositor's bust by the start of recession (5)
 images:
   - https://crosshare.org/api/ogimage/ZShpxJkhignULnj6bFx1
+embed: '<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/ZShpxJkhignULnj6bFx1/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>'
 blogSubscribeFooter: false
 ---
 
@@ -54,5 +55,3 @@ MOUNT ST HELENS (MOUNTS THE LENS)... Here's to more homonyms!
 / [puz](/crosswords/loplop-011.puz)
 / [pdf](/crosswords/loplop-011.pdf)
 / [solutions and annotations](/crosswords/loplop-011-solutions.pdf)
-
-<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/ZShpxJkhignULnj6bFx1/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
