--- a/content/crosswords/012.md
+++ b/content/crosswords/012.md
@@ -4,6 +4,7 @@ date: 2022-08-07
 description: "Event tab is around $101 (8)"
 images:
   - https://crosshare.org/api/ogimage/wuLQUkpJdFgs1JyaliKy
+embed: '<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/wuLQUkpJdFgs1JyaliKy/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>'
 blogSubscribeFooter: false
 ---
 
@@ -28,5 +29,3 @@ Without further ado --- I hope you enjoy!
 / [puz](/crosswords/better-than-one.puz)
 / [pdf](/crosswords/better-than-one.pdf)
 / [solutions and annotations](/crosswords/better-than-one-solutions.pdf)
-
-<iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/wuLQUkpJdFgs1JyaliKy/ArvGvNkiqJRS71DkcyTunpgI9hr2" frameborder="0" allowfullscreen="true" allowtransparency="true"></iframe>
