--- a/content/crosswords/015.md
+++ b/content/crosswords/015.md
@@ -31,7 +31,7 @@ solves --- and without further ado, I hope you enjoy!
 ## Clue Workshop
 
 Today I'll discuss a clue from [_In One
-Basket,_](https://www.georgeho.org/crosswords/010/) my variety collaboration
+Basket,_](/crosswords/010/) my variety collaboration
 with [The Rackenfracker](https://www.therackenfracker.com/). If you haven't
 solved that yet, please do give it a go --- I think it's the puzzle that I'm
 proudest of so far!
