--- a/content/crosswords/017.md
+++ b/content/crosswords/017.md
@@ -1,5 +1,5 @@
 ---
-title: "Second Thoughts: Loplop Variety Quiptic #017 [13x]"
+title: "Second Thoughts: Loplop Variety Quiptic #017 [13×]"
 date: 2022-11-04
 description: \"Hurry up! Squash that bug!\" (4,2,2)
 images:
