--- a/content/crosswords/014.md
+++ b/content/crosswords/014.md
@@ -20,4 +20,4 @@ my latest puzzle.
 
 Without further ado, I hope you enjoy!
 
-[web (lemonade disco)](https://www.taylormadecrosswords.com/suites/blog-post-title-one-d6lj7)
+[web (lemonade disco)](https://lemonadedisco.com/puzzle-suites/blog-post-title-one-d6lj7)
